@@ -1,6 +1,6 @@
-Date: 2025-12-06
+Date: 2025-12-07
 Package: CHNOSZ
-Version: 2.2.0-6
+Version: 2.2.0-7
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
